# LCG-TestDataScience-2

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
TimeSeriesAnalysis/: config.py  dataset.py  features.py  forecast_model.py  lstm_model.py  utils.py
TimeSeriesAnalysis/modeling/: predict.py  train.py
app/: Forecast_notebook.ipynb  requirements.txt
app/ML_artifacts/: MLmodel  conda.yaml  model.pth
app/data/: GlobalLandTemperatures_US_test.csv  GlobalLandTemperatures_US_train.csv
data/raw/climate_data/: GlobalLandTemperatures_US.csv
docs/: README.md  index.md  mkdocs.yml
docs/docs/: index.md
notebooks/: EDA.html  EDA.py  Performance_analysis.html  Performance_analysis.py
notebooks/HTML_notebooks/: EDA.html
scripts/: download_data.py
search/: search_index.json
