[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TimeSeriesAnalysis"
version = "0.0.1"
description = "This project contains tools for a time series analysis"
authors = [
  { name = "Laura Cabayol-Garcia" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

# Include your dependencies here
dependencies = [
    "black==24.8.0",
    "flake8",
    "isort",
    "mkdocs==1.6.1",
    "pip",
    "python-dotenv==1.0.1",
    "mlflow==2.16.2",
    "cloudpickle==3.0.0",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "torch==2.4.1",
    "tqdm==4.66.5",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "requests==2.32.3",
    "matplotlib==3.9.2",
    "jupytext==1.16.4",
    "jupyter==1.1.1",
    "loguru==0.7.2"
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["TimeSeriesAnalysis"]
force_sort_within_sections = true
